# non_exhaustive_rust_template

./: Cargo.toml  README.md
movie_genres/: Cargo.toml
movie_genres/src/: lib.rs
src/: main.rs
