[package]
name = "non_exhaustive_template"
version = "0.1.0"
authors = ["Ayush Kumar Mishra <ayushmishra2005@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
movie_genres = {version = "0.1.0", path="./movie_genres"}